<resources>
    <string name="app_name">e-touchcare</string>
    <string name="action_settings">Action_Settings</string>

    <string name="submit">Submit</string>
    <string name="addnew">Add New</string>
    <string name="edit">Edit</string>
    <string name="refresh">Refresh All</string>
    <string name="basic_patient_title">Patient</string>
    <string name="instructions">Swipe down to refresh - Hold for more options</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="anyway">Sign in Anyway</string>

    <string name="title_activity_main_patient_list">Patients</string>

    <!-- Strings related to FingerPrint LogIn: -->
    <string name="cancel">Cancel</string>
    <string name="use_password">Use password</string>
    <string name="sign_in">Sign in</string>
    <string name="ok">Ok</string>
    <string name="password">Password</string>
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="password_description">Enter your store password to continue</string>
    <string name="fingerprint_login">Fingerprint Log In</string>
    <string name="fingerprint_not_invalidated">Fingerprint Log In</string>
    <string name="fingerprint_button_not_invalidated_description">
        You can proceed with this button \n even if a new fingerprint is enrolled</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <!-- <string name="item_title">White Mesh Pluto Backpack</string>
    <string name="item_price">$62.68</string>
    <string name="item_description">Mesh backpack in white. Black textile trim throughout.</string> -->
    <string name="fingerprint_done">Fingerprint Authentication Successful</string>
    <string name="new_fingerprint_enrolled_description">A new fingerprint was added to this device, so your password is required.</string>
    <string name="use_fingerprint_in_future">Use fingerprint in the future</string>
    <string name="use_fingerprint_to_authenticate_title">Use fingerprint to authenticate</string>
    <string name="use_fingerprint_to_authenticate_key">use_fingerprint_to_authenticate_key</string>

    <string name="hello_blank_fragment">Fragment</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Patient Basic Section-->
    <string name="basic_id">ID: </string>
    <string name="basic_age">Age: </string>
    <string name="basic_room">Room: </string>
    <string name="basic_contacttitle">Contact Information</string>
    <string name="basic_email">Email: </string>
    <string name="basic_phone">Phone: </string>
    <string name="basic_address">Address: </string>
    <string name="basic_title_em">Emergency Contact</string>
    <string name="basic_name">Name: </string>
    <string name="basic_relation_em">Relationship: </string>
    <string name="basic_condition">Condition</string>
    <string name="basic_date">Date: </string>
    <string name="basic_result">Result: </string>
    <string name="basic_diagnosis">P.Diagnosis:</string>
    <string name="basic_gender">Gender: </string>

    <!-- Patient Diagnosis Section -->
    <string name="diag_title_sym">Symptoms</string>
    <string name="diag_title">Diagnosis</string>
    <string name="diag_id">ID: </string>
    <string name="diag_name">Name: </string>
    <string name="diag_detail">Detail: </string>
    <string name="diag_date">Date: </string>

    <!-- Patient Tests Section -->
    <string name="tests_title">Tests</string>
    <string name="tests_name">Test: </string>
    <string name="tests_result">Result: </string>
    <string name="tests_date">Date: </string>
    <string name="tests_id">ID: </string>

    <!--Patient Treatment Section-->
    <string name="treat_title">Treatment Plan</string>
    <string name="set_date">Set Date</string>
    <string name="title_activity_add_test">AddTest</string>
    <string name="title_activity_add_sympton">AddSympton</string>

    <!-- Strings related to profile -->
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>

</resources>
