<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="com.app.etouchcare.PatientBasicFragment">





    <ImageView
        android:layout_width="72dp"
        app:srcCompat="@drawable/patienticon"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/basic_img"
        android:layout_height="72dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/basic_id"
        android:layout_toEndOf="@+id/basic_img"
        android:layout_marginStart="10dp"
        android:text="@string/basic_id"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_alignStart="@+id/basic_id"
        android:layout_below="@+id/basic_id"
        android:id="@+id/basic_name"
        android:text="Name: Mark Turbo" />
    <TextView
        android:id="@+id/basic_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/basic_textsize"
        android:layout_below="@+id/basic_name"
        android:layout_alignStart="@+id/basic_name"
        android:text="Age: 28"/>
    <TextView
        android:id="@+id/basic_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/basic_textsize"
        android:text="Room: 182"
        android:layout_below="@+id/basic_age"
        android:layout_alignStart="@+id/basic_age"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:id="@+id/basic_sess1"
        android:layout_marginTop="3dp"
        android:layout_below="@+id/basic_img"
        android:background="@color/colorDivider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/basic_sess1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:text="@string/basic_contacttitle"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basic_email"/>
            <TextView
                android:id="@+id/basic_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="andrewwer@gmail.com"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basic_phone"/>
            <TextView
                android:id="@+id/basic_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="1252132542"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basic_address"/>
            <TextView
                android:id="@+id/basic_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="152 Coober Road, Toronto"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:background="@color/colorDivider"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:text="@string/basic_title_em"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basic_name"/>
            <TextView
                android:id="@+id/basic_name_em"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="Goaphy Gouba"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basic_relation_em"/>
            <TextView
                android:id="@+id/basic_relation_em"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="Friend"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basic_phone"/>
            <TextView
                android:id="@+id/basic_phone_em"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="1262234521"/>
        </LinearLayout>



    </LinearLayout>




</RelativeLayout>
